--- a/01-form-validator/index.html
+++ b/01-form-validator/index.html
@@ -5,36 +5,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form Validation</title>
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="wrap">
         <form id="form" class="form">
-            <h2>Register With Us</h2>
+            <h2>Zarejestruj się!</h2>
             <div class="form-control">
-                <label for="username">Imię i nazwisko:</label>
-                <input type="text" name="username" id="username">
+                <label for="username">Imię:</label>
+                <input type="text" id="username" placeholder="Wpisz imię">
                 <small>Error message</small>
             </div>
             <div class="form-control">
-                <label for="username">Email:</label>
-                <input type="text" name="username" id="username">
+                <label for="email">Email:</label>
+                <input type="text" id="email" placeholder="Wpisz email">
                 <small>Error message</small>
             </div>
             <div class="form-control">
-                <label for="password">Password:</label>
-                <input type="text" name="password" id="password">
+                <label for="password">Hasło:</label>
+                <input type="password" id="password" placeholder="Wpisz hasło">
                 <small>Error message</small>
             </div>
             <div class="form-control">
-                <label for="password2">Confirm Password:</label>
-                <input type="text" name="password2" id="password2">
+                <label for="password2">Powtórz hasło:</label>
+                <input type="password" id="password2" placeholder="Powtórz hasło">
                 <small>Error message</small>
             </div>
+            <input type="submit" value="Wyślij" class="form-button">
         </form>
     </div>
-
 
     <script src="main.js"></script>
 </body>
